--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,28 @@
         </div>
         <!-- /.navbar-header -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
+          
           <div class="nav navbar-right navbar-btn">
+            <% if user_signed_in? %>
             <%= link_to new_contact_path, class: "btn btn-default" do %>
-              <i class="glyphicon glyphicon-plus"></i> <strong>Add Contact</strong> 
-             
-              <% end %>
+              <i class="glyphicon glyphicon-plus"></i> <strong>Add Contact</strong>
+              <%end%>
               
+              <%= link_to current_user.full_name, edit_user_registration_path, class: "btn btn-success"  %>
+              <%= link_to destroy_user_session_path, method: :delete, class: "btn btn-default" do %>
+               <strong>Logout</strong>            
+              <% end %>
+              <%else%>
+              <% link_to new_user_registration_path, class: "btn btn-default" do %>
+               <strong>Sign up</strong>             
+              <% end %>
+              <%= link_to new_user_session_path, class: "btn btn-default" do %>
+               <strong>Login</strong>            
+              <% end %>
+              <% end %>
+            
+          </div>
+
               	
               	
      
@@ -41,12 +57,21 @@
 
       </div>
     </nav>
-    <
-
+    
     <!-- content -->
     <div class="container">
+      <% if user_signed_in? %>
       <div class="row">
+          <form class="navbar-form navbar-right">
+            <%= form_tag contacts_path, method: :get do %>
+          <div class='form-group'>            
+            <%= text_field_tag :search, params[:search], class: "form-control ", placeholder: "Search Contact" %>
+               <%= submit_tag 'Search', name: nil, class: "btn btn-primary" %>
+               </div>
+               </form>
+          <% end %>
         <div class="col-md-3">
+
           <div class="list-group">
             <!-- set active links-->
             <% active = params[:group_id] == nil ? 'active' : '' %>
@@ -61,11 +86,14 @@
               <%= group.name %><span class="badge"><%= group.contacts.count %></span>
             <% end %>
            <% end %>
+           <% end %>
             
           </div>
+          
         </div><!-- /.col-md-3 -->
 
-        <div class="col-md-6">
+        <div class="col-md-9">
+          
 
           <%flash.each do |type, message| %>
           <%= content_tag :div, class: "alert alert-#{type} alert-dismissible", role: "alert" do %>
@@ -81,20 +109,7 @@
         </div>
 
 
-        <div class="col-md-3">
-          
-          <%= form_tag contacts_path, method: :get do %>
-          <div class='row'>
-          <div class="form-inline">
-
-            
-            <%= text_field_tag :search, params[:search], class: "form-control ", placeholder: "Search Contact" %>
-               <%= submit_tag 'Search', name: nil, class: "btn btn-primary" %>
-               </div>
-               </div>
-          <% end %>
-    
-     </div>
+        
     </div>
 
 
