--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -24,9 +24,11 @@
         </div>
       </div>
     </td>
-    <td width="100" class="middle">
+    <td width="150" class="middle">
       <div>
-        <%= link_to edit_contact_path(contact), class: "btn btn-circle btn-default btn-xs", title: "Edit" do %>
+        <%= link_to contact_path(contact), class: "btn btn-circle btn-info btn-xs", title: "View" do %><i class="glyphicon glyphicon-eye-open"></i>
+          <% end %>
+        <%= link_to edit_contact_path(contact), class: "btn btn-circle btn-success btn-xs", title: "Edit" do %>
         <i class="glyphicon glyphicon-edit"></i>
         <% end %>
         <%= link_to contact_path(contact), :method => :delete, class: "btn btn-circle btn-danger btn-xs", title: "Delete", data: { confirm: "Are you sure ?" } do %>
