--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,11 @@
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+     </div> 
+      <div class="col-md-4">
+
 <h2>Sign up</h2>
+
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -34,3 +41,6 @@
 
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
+</div>
