--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,13 +32,13 @@
               <i class="glyphicon glyphicon-plus"></i> <strong>Add Contact</strong>
               <%end%>
               
-              <%= link_to current_user.full_name, edit_user_registration_path, class: "btn btn-success"  %>
+              <%= link_to current_user.full_name, edit_user_registration_path, class: "btn btn-info"  %>
               <%= link_to destroy_user_session_path, method: :delete, class: "btn btn-default" do %>
                <strong>Logout</strong>            
               <% end %>
               <%else%>
               <% link_to new_user_registration_path, class: "btn btn-default" do %>
-               <strong>Sign up</strong>             
+              <strong>Sign up</strong>             
               <% end %>
               <%= link_to new_user_session_path, class: "btn btn-default" do %>
                <strong>Login</strong>            
@@ -93,13 +93,11 @@
         </div><!-- /.col-md-3 -->
 
         <div class="col-md-9">
-          
 
           <%flash.each do |type, message| %>
           <%= content_tag :div, class: "alert alert-#{type} alert-dismissible", role: "alert" do %>
           <button type="button" class= close data-dismiss="alert" aria-label= "Close" ><span aria-hidden= "true" > &times; </span></button>
           <%= message %>
-
           <% end %>
           <% end %>
 
