--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,4 +1,6 @@
-<%= simple_form_for([@contact, @contact.notes.build]) do |f| %>
-  <%= f.input :content, label: "Note" %>
-  <%= f.button :submit %>
-<% end %>
+<div class="col-md-9">
+ <%= simple_form_for([@contact, @contact.notes.build]) do |f| %>
+   <%= f.input :content, label: "New note", as: :text, :input_html => { :rows => 10 } %>
+   <%= f.button :submit, class: "btn btn-success" %>
+ <% end %>
+</div>
