--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,4 +1,6 @@
-<%= simple_form_for([@contact, @note]) do |f| %>
-  <%= f.input :content, label: "Note" %>
-  <%= f.button :submit %>
+<div class=" col-md-9" ><%= simple_form_for([@contact, @note]) do |f| %>
+  <div><%= f.input :content, label: "Edit note", as: :text, :input_html => { :rows => 10 } %></div>
+  <%= f.button :submit, class: "btn btn-success" %>
 <% end %>
+</div>
+
