--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,5 +1,5 @@
-<div class="col-md-9" style="border: 3px solid powderblue; padding: 10px; background: white;">
-    <div class="col-md-9"><%= note.content %></div>
+<div class="col-md-9" style="border: 5px solid powderblue; padding: 10px; background: white;">
+    <div class="col-md-9"><p><%= note.content %></p></div>
 </div>   
       <div class="col-md-9" style="padding: 10px;">Created by: <%= note.user.full_name %> at: <span class="glyphicon glyphicon-time"></span> - <%= time_tag(note.created_at) %> - </div><br>
       
