--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -5,7 +5,7 @@
     <div class="panel-body">
     	
     	
-    	<div class="col-md-4 thumbnail" style="width: 200px; height: 200px; ">
+    	<div class="col-md-4 thumbnail" style="width: 200px; height: 200px; border-radius: 50% ">
           <%= image_tag @contact.avatar.url(:medium) %>
         </div>
         
