--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -6,7 +6,7 @@
     	
     	
     	<div class="col-md-4 thumbnail" style="width: 250px; height: 250px; border-radius: 50%; float: left; margin-right: 15px;">
-          <%= image_tag @contact.avatar.url(:medium) %>
+          <%= image_tag @contact.avatar.url, :size =>"250x250" %>
         </div>
         
         <div class="col-md-7" style="background-color:lavenderblush; margin-top: 5px; padding-top: 10px;"><strong>Company:</strong> <%= @contact.company %></div><br>
