--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>APcontact</title>
+    <title>APcontactM</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -73,14 +73,15 @@
             <% active = params[:group_id] == nil ? 'active' : '' %>
 
             <%= link_to contacts_path, class: "list-group-item #{active}" do %>
-              All Contacts <span class="badge"><%= Contact.count %></span>
-            <% end %>
+              All Contacts<span class="badge"><%= Contact.count %></span>
+            
             
             <% Group.all.each do |group| %>
             <% active = params[:group_id].to_i == group.id ? 'active' : '' %>
              <%= link_to contacts_path(group_id: group.id), class: "list-group-item #{active}" do %>
               <%= group.name %><span class="badge"><%= group.contacts.count %></span>
             <% end %>
+           <% end %>
            <% end %>
            <% end %>
             
