--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         </div>
         <!-- /.navbar-header -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
-          
+
           <div class="nav navbar-right navbar-btn">
             <% if user_signed_in? %>
             <%= link_to "Collaboration",  search_contacts_path, class: "btn btn-default"  %>
@@ -33,22 +33,22 @@
             <%= link_to new_contact_path, class: "btn btn-default" do %>
               <i class="glyphicon glyphicon-plus"></i> <strong>Add Contact</strong>
               <%end%>
-              
+
               <%= link_to current_user.full_name, edit_user_registration_path, class: "btn btn-info"  %>
               <%= link_to destroy_user_session_path, method: :delete, class: "btn btn-default" do %>
-               <strong>Logout</strong>            
+               <strong>Logout</strong>
               <% end %>
               <%else%>
-              
-              
+
+
               <% end %>
-            
-          </div>             
-          </div>         
+
+          </div>
+          </div>
         </div>
       </div>
     </nav>
-    
+
     <!-- content -->
     <div class="container">
       <% if user_signed_in? %>
@@ -57,7 +57,7 @@
 
           <form class="navbar-form navbar-right">
             <%= form_tag contacts_path, method: :get do %>
-          <div class='form-group'>            
+          <div class='form-group'>
             <%= text_field_tag :search, params[:search], class: "form-control ", placeholder: "Search Contact" %>
                <%= submit_tag 'Search', name: nil, class: "btn btn-primary" %>
                </div>
@@ -70,7 +70,7 @@
             <% active = params[:group_id] == nil ? 'active' : '' %>
 
             <%= link_to contacts_path, class: "list-group-item #{active}" do %>
-              All Contacts<span class="badge"><%= Contact.count %></span>         
+              All Contacts<span class="badge"><%= Contact.count %></span>
             <% Group.all.each do |group| %>
             <% active = params[:group_id].to_i == group.id ? 'active' : '' %>
             <%= link_to contacts_path(group_id: group.id), class: "list-group-item #{active}" do %>
@@ -79,9 +79,9 @@
             <% end %>
             <% end %>
             <% end %>
-            
+
           </div>
-          
+
         </div><!-- /.col-md-3 -->
          <% end %>
 
@@ -94,16 +94,17 @@
           <% end %>
           <% end %>
 
-         
- 
+
+
         	<%= yield %>
+          <%= debug(params) if Rails.env.development? %>
         </div>
 
 
-        
+
     </div>
 
 
-    
+
   </body>
 </html>
