--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -3,27 +3,29 @@
         <h4><strong><%= @contact.title %> <%= @contact.name %> <%= @contact.surname %></strong></h4>
     </div>
     <div class="panel-body">
-
-
     	<div class="col-md-4 thumbnail hidden-xs hidden-sm" style="width: 250px; height: 250px; border-radius: 50%; float: left; margin-right: 15px;">
-          <%= image_tag @contact.avatar.url(:medium), :size =>"250x250" %>
-        </div>
-        <div class="col-md-7">
-        <div class="" style="background-color:lavenderblush; margin-top: 5px; padding-top: 10px;"><strong>Company:</strong> <%= @contact.company %></div>
-    	<div class="" style="background-color:lavenderblush;"><%= mail_to @contact.email do %><strong>Email:</strong> <span><%= @contact.email %></span></div>
+        <%= image_tag @contact.avatar.url(:medium), :size =>"250x250" %>
+      </div>
+      <div class="col-md-7">
+        <div style="background-color:lavenderblush; margin-top: 5px; padding-top: 10px;"><strong>Company:</strong> <%= @contact.company %></div>
+    	  <div style="background-color:lavenderblush;"><%= mail_to @contact.email do %><strong>Email:</strong> <span><%= @contact.email %></span></div>
         <% end %>
-    	<div class="" style="background-color:lavenderblush;"><strong>Skype:</strong> <%= @contact.skype %>  <a href="skype:[<%= @contact.skype %>]?[action]" class="btn btn-success btn-xs" role="button">  <span> Call</span></a></div>
-    	<div class="" style="background-color:lavenderblush;"><strong>Phone:</strong> <%= @contact.phone %></div>
-    	<div class="" style="background-color:lavenderblush;"><strong>Mobile:</strong> <%= @contact.mobile %></div>
-    	<div class="" style="background-color:lavenderblush;"><strong>Webinar:</strong> <%= @contact.webinar %></div>
-    	<div class="" style="background-color:lavenderblush;"><strong>Relatore a Londra:</strong> <%= @contact.relatore_a_londra %></div>
-    	<div class="" style="background-color:lavenderblush;"><strong>Relatore Italia:</strong> <%= @contact.relatore_italia %></div>
-        <div class="" style="background-color:lavenderblush;"><strong>Articles:</strong> <%= @contact.article %></div>
-        <div class="" style="background-color:lavenderblush; "><strong>Publications:</strong> <%= @contact.publications %></div>
-        <div class="" style="background-color:lavenderblush;"><strong>Contract:</strong> <%= @contact.contract %></div>
-        <div class="" style="background-color:lavenderblush;"><strong>Start of collaboration:</strong> <%= @contact.collaboration %></div>
-    	<div class="" style="background-color:lavenderblush;  text-transform: capitalize;"><strong>Specializzazioni:</strong> <%= @contact.specializzazioni %></div>
-      <div class="" style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> <%=link_to @contact.curriculum.file.filename, @contact.curriculum.url %></div> </div><br>
+    	  <div style="background-color:lavenderblush;"><strong>Skype:</strong> <%= @contact.skype %>  <a href="skype:[<%= @contact.skype %>]?[action]" class="btn btn-success btn-xs" role="button">  <span> Call</span></a></div>
+    	  <div style="background-color:lavenderblush;"><strong>Phone:</strong> <%= @contact.phone %></div>
+    	  <div style="background-color:lavenderblush;"><strong>Mobile:</strong> <%= @contact.mobile %></div>
+    	  <div style="background-color:lavenderblush;"><strong>Webinar:</strong> <%= @contact.webinar %></div>
+    	  <div style="background-color:lavenderblush;"><strong>Relatore a Londra:</strong> <%= @contact.relatore_a_londra %></div>
+    	  <div style="background-color:lavenderblush;"><strong>Relatore Italia:</strong> <%= @contact.relatore_italia %></div>
+        <div style="background-color:lavenderblush;"><strong>Articles:</strong> <%= @contact.article %></div>
+        <div style="background-color:lavenderblush; "><strong>Publications:</strong> <%= @contact.publications %></div>
+        <div style="background-color:lavenderblush;"><strong>Contract:</strong> <%= @contact.contract %></div>
+        <div style="background-color:lavenderblush;"><strong>Start of collaboration:</strong> <%= @contact.collaboration %></div>
+    	  <div style="background-color:lavenderblush;  text-transform: capitalize;"><strong>Specializzazioni:</strong> <%= @contact.specializzazioni %></div>
+          <% if @contact.curriculum == nil %>
+          <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> No C.V.</div>
+          <% else %>
+          <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> <%=link_to @contact.curriculum.file.filename, @contact.curriculum.url %></div>
+    </div> <br><% end %>
         <div class="col-md-10"  style="padding-top: 5px;">Created by: <%= @contact.user.full_name %> at: <span class="glyphicon glyphicon-time"></span> - <%= time_tag(@contact.created_at) %> - </div>
 
 
