--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -24,7 +24,7 @@
           <% if @contact.curriculum == nil %>
           <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> No C.V.</div>
           <% else %>
-          <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> <%=link_to @contact.curriculum.file.filename, @contact.curriculum.url %></div>
+          <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> <%=link_to 'View C.V.', @contact.curriculum.url %></div>
     </div> <br><% end %>
         <div class="col-md-10"  style="padding-top: 5px;">Created by: <%= @contact.user.full_name %> at: <span class="glyphicon glyphicon-time"></span> - <%= time_tag(@contact.created_at) %> - </div>
 
