--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -184,7 +184,7 @@
   </div>
   <div class="fileinput fileinput-new" data-provides="fileinput">
     <div class="fileinput-new">
-      <%=  @contact.curriculum.file.filename %>
+      <%=  @contact.curriculum%>
     </div>
   <div class="fileinput-preview fileinput-exists">
 
