--- a/app/views/noteattaches/_form.html.erb
+++ b/app/views/noteattaches/_form.html.erb
@@ -23,6 +23,7 @@
     <%= f.input :attach, label: "Attachment" %>
 
     <%= f.input :note_id, :as => :hidden, input_html: { value: params[:note_id] } %>
+    <%= f.input :contact_id, :as => :hidden, input_html: { value: params[:contact_id] } %>
   </div>
 
   <div class="form-actions">
