--- a/app/views/contacts/edit.html.erb
+++ b/app/views/contacts/edit.html.erb
@@ -1,6 +1,8 @@
-        <div class="panel panel-default">
-            <div class="panel-heading">
-              <strong>Edit Contact</strong>
-            </div>
-           <%= render 'form' %>
-        </div>
+<div class="container">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <strong>Edit Contact</strong>
+    </div>
+      <%= render 'form' %>
+  </div>
+</div>
