--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,46 +1,118 @@
-<div class="panel panel-default">
-    <div class="panel-heading">
-        <h4><strong><%= @contact.title %> <%= @contact.name %> <%= @contact.surname %></strong></h4>
-    </div>
-    <div class="panel-body">
-    	<div class="col-md-4 thumbnail hidden-xs hidden-sm" style="width: 250px; height: 250px; border-radius: 50%; float: left; margin-right: 15px;">
-        <%= image_tag @contact.avatar.url(:medium), :size =>"250x250" %>
+<div class="row">
+  <div class="col-md-offset-3 col-md-6">
+    <div class="panel panel-default ">
+      <div class="panel-heading">
+          <h4><strong><%= @contact.title %> <%= @contact.name %> <%= @contact.surname %></strong></h4>
       </div>
-      <div class="col-md-7">
-        <div style="background-color:lavenderblush; margin-top: 5px; padding-top: 10px;"><strong>Company:</strong> <%= @contact.company %></div>
-    	  <div style="background-color:lavenderblush;"><%= mail_to @contact.email do %><strong>Email:</strong> <span><%= @contact.email %></span></div>
-        <% end %>
-    	  <div style="background-color:lavenderblush;"><strong>Skype:</strong> <%= @contact.skype %>  <a href="skype:[<%= @contact.skype %>]?[action]" class="btn btn-success btn-xs" role="button">  <span> Call</span></a></div>
-    	  <div style="background-color:lavenderblush;"><strong>Phone:</strong> <%= @contact.phone %></div>
-    	  <div style="background-color:lavenderblush;"><strong>Mobile:</strong> <%= @contact.mobile %></div>
-    	  <div style="background-color:lavenderblush;"><strong>Webinar:</strong> <%= @contact.webinar %></div>
-    	  <div style="background-color:lavenderblush;"><strong>Relatore a Londra:</strong> <%= @contact.relatore_a_londra %></div>
-    	  <div style="background-color:lavenderblush;"><strong>Relatore Italia:</strong> <%= @contact.relatore_italia %></div>
-        <div style="background-color:lavenderblush;"><strong>Articles:</strong> <%= @contact.article %></div>
-        <div style="background-color:lavenderblush; "><strong>Publications:</strong> <%= @contact.publications %></div>
-        <div style="background-color:lavenderblush;"><strong>Contract:</strong> <%= @contact.contract %></div>
-        <div style="background-color:lavenderblush;"><strong>Start of collaboration:</strong> <%= @contact.collaboration %></div>
-    	  <div style="background-color:lavenderblush;  text-transform: capitalize;"><strong>Specializzazioni:</strong> <%= @contact.specializzazioni %></div>
-          <% if @contact.curriculum.present? %>
-          <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> <%=link_to 'View C.V.', @contact.curriculum.url %></div>
+      <div class="panel-body">
+      	<div class="col-md-4 thumbnail hidden-xs hidden-sm" style="width: 250px; height: 250px; border-radius: 50%; float: left; margin-right: 15px;">
+          <%= image_tag @contact.avatar.url(:medium), :size =>"250x250" %>
+        </div>
+        <div class=" col-md-7">
+          <div style="background-color:lavenderblush; margin-top: 5px; padding-top: 10px;"><strong>Company:</strong> <%= @contact.company %></div>
+      	  <div style="background-color:lavenderblush;"><%= mail_to @contact.email do %><strong>Email:</strong> <span><%= @contact.email %></span></div>
+          <% end %>
+      	  <div style="background-color:lavenderblush;"><strong>Skype:</strong> <%= @contact.skype %>  <a href="skype:[<%= @contact.skype %>]?[action]" class="btn btn-success btn-xs" role="button">  <span> Call</span></a></div>
+      	  <div style="background-color:lavenderblush;"><strong>Phone:</strong> <%= @contact.phone %></div>
+      	  <div style="background-color:lavenderblush;"><strong>Mobile:</strong> <%= @contact.mobile %></div>
+      	  <div style="background-color:lavenderblush;"><strong>Webinar:</strong> <%= @contact.webinar %></div>
+      	  <div style="background-color:lavenderblush;"><strong>Relatore a Londra:</strong> <%= @contact.relatore_a_londra %></div>
+      	  <div style="background-color:lavenderblush;"><strong>Relatore Italia:</strong> <%= @contact.relatore_italia %></div>
+          <div style="background-color:lavenderblush;"><strong>Articles:</strong> <%= @contact.article %></div>
+          <div style="background-color:lavenderblush; "><strong>Publications:</strong> <%= @contact.publications %></div>
+          <div style="background-color:lavenderblush;"><strong>Contract:</strong> <%= @contact.contract %></div>
+          <div style="background-color:lavenderblush;"><strong>Start of collaboration:</strong> <%= @contact.collaboration.strftime("%d-%b-%Y") %></div>
+      	  <div style="background-color:lavenderblush;  text-transform: capitalize;"><strong>Specializzazioni:</strong> <%= @contact.specializzazioni %></div>
+            <% if @contact.curriculum.present? %>
+            <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> <%=link_to 'View C.V.', @contact.curriculum.url %></div>
 
-          <% else %>
-          <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> No C.V.</div><% end %>
-    </div> <br>
-        <div class="col-md-10"  style="padding-top: 5px;">Created by: <%= @contact.user.full_name %> at: <span class="glyphicon glyphicon-time"></span> - <%= time_tag(@contact.created_at) %> - </div>
-
-
-    </div>
+            <% else %>
+            <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> No C.V.</div><% end %>
+      </div> <br>
+          <div class="col-md-10"  style="padding-top: 5px;">Created by: <%= @contact.user.full_name %> at: <span class="glyphicon glyphicon-time"></span> - <%= time_tag(@contact.created_at) %> - </div>
+      </div>
+  </div>
+  <%= link_to "Back to Contacts", contacts_path, class: "btn btn-info" %>
 </div>
-<%= link_to "Back to Contacts", contacts_path, class: "btn btn-info" %>
+</div>
+<div class="clearfix">
+  <br>
+</div>
 
-<a class="btn btn-info" href="#targetname"style="float: right;">New note</a>
-<br>
+<div class="row">
+  <div class="col-md-4">
+    <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Notes <span class="label label-info pull-right"><a href="#targetname"style="float: right;">New note</a></span></h3>
+    </div>
+      <div class="panel-body">
 
-<h3>Notes:</h3>
 <%= render @contact.notes %><br>
+<a name="targetname"><%= render "notes/form" %></a><br>
+</div>
+</div>
+</div>
 
+<div class="col-md-4">
+  <div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Events <span class="label label-info pull-right"><%= link_to "New Event", new_event_path(:contact_id => @contact) %></span></h3>
+  </div>
 
+  <div class="panel-body">
+    <% if @contact.events.present? %>
+    <ul class="list-group">
 
+      <% @contact.events.each do |event| %>
+      <li class="list-group-item"><%= event.event_date.strftime("%d-%b-%Y") %><div class="pull-right" style="margin-top: -6px;">
 
-<a name="targetname"><%= render "notes/form" %></a>
+      <%= link_to edit_event_path(event, :contact_id => @contact), class: "btn btn-circle btn-success btn-xs", title: "Edit" do %>
+      <i class="glyphicon glyphicon-edit"></i>
+      <% end %>
+      <%= link_to event_path(event), :method => :delete, class: "btn btn-circle btn-danger btn-xs", title: "Delete", data: { confirm: "Are you sure ?" } do %>
+      <i class="glyphicon glyphicon-remove"></i>
+      <% end %></div></li>
+      <li  class="list-group-item"> <%= event.name %></li>
+
+      <hr>
+      <% end %>
+      </ul>
+    <% else %>
+    <h3 align="center" class="text-danger"> Contact has no events </h3>
+    <% end %>
+  </div>
+</div>
+
+</div>
+<div class="col-md-4">
+  <div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Tasks <span class="label label-info pull-right"><%= link_to "New Task", new_task_path(:contact_id => @contact)%></span></h3>
+  </div>
+
+  <div class="panel-body">
+    <% if @contact.tasks.present? %>
+    <ul class="list-group">
+
+      <% @contact.tasks.each do |task| %>
+      <li class="list-group-item"><%= task.task_date.strftime("%d-%b-%Y") %><div class="pull-right" style="margin-top: -6px;">
+
+      <%= link_to edit_task_path(task, :contact_id => @contact), class: "btn btn-circle btn-success btn-xs", title: "Edit" do %>
+      <i class="glyphicon glyphicon-edit"></i>
+      <% end %>
+      <%= link_to task_path(task), :method => :delete, class: "btn btn-circle btn-danger btn-xs", title: "Delete", data: { confirm: "Are you sure ?" } do %>
+      <i class="glyphicon glyphicon-remove"></i>
+      <% end %></div></li>
+      <li  class="list-group-item"> <%= task.contact_name %></li>
+      <li  class="list-group-item"> <%= simple_format(task.task_desc) %></li>
+
+      <hr>
+      <% end %>
+      </ul>
+    <% else %>
+    <h3 align="center" class="text-danger"> Contact has no tasks </h3>
+    <% end %>
+  </div>
+</div>
+</div>
+</div>
