--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,61 +50,16 @@
     </nav>
 
     <!-- content -->
-    <div class="container">
-      <% if user_signed_in? %>
-      <%  if params[:controller] == 'contacts' && params[:action] == 'index' || params[:action] == 'show' || params[:action] == 'edit'%>
+    <div class="container-fluid">
       <div class="row">
-
-          <form class="navbar-form navbar-right">
-            <%= form_tag contacts_path, method: :get do %>
-          <div class='form-group'>
-            <%= text_field_tag :search, params[:search], class: "form-control ", placeholder: "Search Contact" %>
-               <%= submit_tag 'Search', name: nil, class: "btn btn-primary" %>
-               </div>
-               </form>
-          <% end %>
-        <div class="col-md-3 col-sm-6">
-
-          <div class="list-group">
-            <!-- set active links-->
-            <% active = params[:group_id] == nil ? 'active' : '' %>
-
-            <%= link_to contacts_path, class: "list-group-item #{active}" do %>
-              All Contacts<span class="badge"><%= Contact.count %></span>
-            <% Group.all.each do |group| %>
-            <% active = params[:group_id].to_i == group.id ? 'active' : '' %>
-            <%= link_to contacts_path(group_id: group.id), class: "list-group-item #{active}" do %>
-             <%= group.name %><span class="badge"><%= group.contacts.count %></span>
-            <% end %>
-            <% end %>
-            <% end %>
-            <% end %>
-
-          </div>
-
-        </div><!-- /.col-md-3 -->
-         <% end %>
-
-        <div class="col-md-9 col-sm-7">
-
-          <%flash.each do |type, message| %>
-          <%= content_tag :div, class: "alert alert-#{type} alert-dismissible", role: "alert" do %>
-          <button type="button" class= close data-dismiss="alert" aria-label= "Close" ><span aria-hidden= "true" > &times; </span></button>
-          <%= message %>
-          <% end %>
-          <% end %>
-
-
-
-        	<%= yield %>
-          <%= debug(params) if Rails.env.development? %>
+        <div class="container">
+          <%= render 'shared/messages' %>
         </div>
-
-
-
+      </div>
+        	<%= yield %>
+          <br>
+          <hr>
+          <%= debug(params) if Rails.env.development? %>
     </div>
-
-
-
   </body>
 </html>
