--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,29 +1,26 @@
-<div class="row">
-<div class="col-md-12 " style="border: 5px solid powderblue; padding: 10px; background: white;">
 
-    <div class="col-md-7" ><p><%= note.content %></p></div>
-    <div class="col-md-offset-1 col-md-4"style="border: 5px solid powderblue; padding: 10px; background: white;" >
-      <ul class="list-group">
-  <% note.noteattaches.order('created_at desc').each do |noteattach| %>
-
-    <li class="list-group-item"><%= link_to noteattach.name, noteattach.attach.url %> <%= link_to noteattach_path(noteattach), :method => :delete, class: "btn btn-circle btn-danger btn-xs ", title: "Delete", data: { confirm: "Are you sure ?" } do %>
-    <i class="glyphicon glyphicon-remove"></i>
-    <% end %></li>
-
-
-  <% end %>
-    </ul>
-    </div>
+<div class="col-md-12" ><p><%= simple_format(note.content) %></p><hr></div>
+<div class="col-md-12" >
+  <h4>Attachments</h4>
+  <ul class="list-group">
+    <% if note.noteattaches.present? %>
+    <% note.noteattaches.order('created_at desc').each do |noteattach| %>
+      <li class="list-group-item"><%= link_to noteattach.name, noteattach.attach.url %>
+        <span class="pull-right" style="margin-top: -6px;"> <%= link_to noteattach_path(noteattach), :method => :delete, class: "btn btn-circle btn-danger btn-xs ", title: "Delete", data: { confirm: "Are you sure ?" } do %>
+          <i class="glyphicon glyphicon-remove"></i>
+          <% end %>
+        </span>
+      </li>
+    <% end %>
+    <% else %>
+    <li class="list-group-item"> Currently no Attachments </li>
+    <% end %>
+  </ul>
 </div>
+<div class="col-md-12" style="padding: 10px;">Created by: <%= note.user.full_name %> at: <span class="glyphicon glyphicon-time"></span> - <%= time_tag(note.created_at) %> - </div><br>
 
 
-  </div>
-
-
-      <div class="col-md-9" style="padding: 10px;">Created by: <%= note.user.full_name %> at: <span class="glyphicon glyphicon-time"></span> - <%= time_tag(note.created_at) %> - </div><br>
-
-
-<div class="container col-md-9" style="padding: 10px;"><%= link_to "Edit", edit_contact_note_path(note.contact, note), class: "btn btn-success" %>
+<div class="container col-md-12" style="padding: 10px;"><%= link_to "Edit", edit_contact_note_path(note.contact, note), class: "btn btn-success" %>
 <%= link_to "Delete", contact_note_path(note.contact, note), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
-<%= link_to "Attach", new_noteattach_path(:note_id => note, :contact_id => @contact), class: "btn btn-warning" %>
+<%= link_to "Attach", new_noteattach_path(:note_id => note, :contact_id => @contact), class: "btn btn-warning" %><hr>
 </div>
