--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -21,7 +21,7 @@
           <div style="background-color:lavenderblush;"><strong>Articles:</strong> <%= @contact.article %></div>
           <div style="background-color:lavenderblush; "><strong>Publications:</strong> <%= @contact.publications %></div>
           <div style="background-color:lavenderblush;"><strong>Contract:</strong> <%= @contact.contract %></div>
-          <div style="background-color:lavenderblush;"><strong>Start of collaboration:</strong> <%= @contact.collaboration.strftime("%d-%b-%Y") %></div>
+          <div style="background-color:lavenderblush;"><strong>Start of collaboration:</strong> <%= @contact.collaboration.try(:strftime, "%d-%b-%Y") %></div>
       	  <div style="background-color:lavenderblush;  text-transform: capitalize;"><strong>Specializzazioni:</strong> <%= @contact.specializzazioni %></div>
             <% if @contact.curriculum.present? %>
             <div style="background-color:lavenderblush; padding-bottom: 10px; text-transform: capitalize;"><strong>Curriculum:</strong> <%=link_to 'View C.V.', @contact.curriculum.url %></div>
